--- a/src/app/styles/base/site.scss
+++ b/src/app/styles/base/site.scss
@@ -42,6 +42,11 @@ button {
         background-color: $color-alt-orange;
     }
 }
+.checkbox{
+    height: 1rem;
+    width: 1rem;
+    margin-right: .5rem;
+}
 .input-text{
     display: inline-block;
     border: none;
