--- a/src/app/styles/base/site.scss
+++ b/src/app/styles/base/site.scss
@@ -23,7 +23,7 @@ a {
 
 button {
     display: block;
-    width: 100%;
+    
     margin-bottom: 0.5rem;
     background: $color-orange;
     border: 0;
@@ -32,10 +32,14 @@ button {
     color: $color-white;
     outline: 0;  
 
+    @include bp(xs){
+        width: 100%;
+    }
+
     @include bp(md){
         display: inline-block;
         margin-bottom: 0;
-        width: 10%;
+
     }
 
     &:hover {
