--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,13 +1,13 @@
 <div>
   <div *ngIf="isCardsVisible === false">
-      <div class="programation__year">English Classes 2018</div>
-      <button (click)="generateCards()" class="programation__groups">{{buttonText}}
+      <div class="schedule__year">English Classes 2018</div>
+      <button (click)="generateCards()" class="schedule__groups">{{buttonText}}
           <i *ngIf="isSpinnerVisible" class="fa fa-spinner fa-spin"></i>
       </button>
   </div>
 
-  <div *ngIf="isCardsVisible" class="programation">
-    <div class="programation__filters filter-box">
+  <div *ngIf="isCardsVisible" class="schedule">
+    <div class="schedule__filters filter-box">
         <div class="filter-box__header">
           <b>Filters</b>
         </div>
@@ -50,16 +50,16 @@
         </div>
     </div>
 
-    <div class="programation__list">
+    <div class="schedule__list">
       <app-message-box [message]="message" [type]="messageType" [showMessage]="showMessage"></app-message-box>
       <ng-container *ngFor="let group of groups">
         <a routerLink="/schedule/{{group.idGroup}}">
-        <div class="programation__card" [ngClass]="{'programation__card--unassigned': group.teacherName === 'Unassigned'}">
-          <div class="programation__card-content">
-            <div class="programation__card-item">
-                <span class="programation__card-name"><b>{{group.levelName}} - {{group.teacherName}} {{group.teacherLastName}}</b></span>
-                <span class="programation__card-schedule">{{group.scheduleDescription}} {{group.formattedStartHour}} - {{group.formattedEndHour}}</span>
-                <span class="programation__card-availability"><b class="programation__card__availability">{{group.students}}/10<i class="fa fa-user programation__card-user"></i></b></span>
+        <div class="schedule__card" [ngClass]="{'schedule__card--unassigned': group.teacherName === 'Unassigned'}">
+          <div class="schedule__card-content">
+            <div class="schedule__card-item">
+                <span class="schedule__card-name"><b>{{group.levelName}} - {{group.teacherName}} {{group.teacherLastName}}</b></span>
+                <span class="schedule__card-schedule">{{group.scheduleDescription}} {{group.formattedStartHour}} - {{group.formattedEndHour}}</span>
+                <span class="schedule__card-availability"><b class="schedule__card__availability">{{group.students}}/10<i class="fa fa-user schedule__card-user"></i></b></span>
             </div>
           </div>
           <div>
