--- a/src/app/schedule/schedule-detail/schedule-detail.component.scss
+++ b/src/app/schedule/schedule-detail/schedule-detail.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/helpers/variables.scss';
-@import '../../styles/helpers/mixins.scss';
+@import '../../styles/helpers/variables';
+@import '../../styles/helpers/mixins';
 
 .schedule-detail__container {
     background: url(/assets/imagenes/background-cars.jpeg) no-repeat center center fixed;
