--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/helpers/variables.scss';
-@import '../../styles/helpers/mixins.scss';
+@import '../styles/helpers/variables';
+@import '../styles/helpers/mixins';
 
 .home {
     height: 100%;
@@ -7,8 +7,8 @@
     position: relative;
 }
 
-.home__image { 
-    height: 100%; 
+.home__image {
+    height: 100%;
     background: url(/assets/imagenes/bienvenida.jpeg) no-repeat center center fixed;
     background-size: cover;
     opacity: 0.5;
