--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/helpers/variables.scss';
-@import '../../styles/helpers/mixins.scss';
+@import '../styles/helpers/variables';
+@import '../styles/helpers/mixins';
 
 .login-container{
     height: 100%;
