--- a/src/app/preinscription/student-preinscription/student-preinscription.component.scss
+++ b/src/app/preinscription/student-preinscription/student-preinscription.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/helpers/variables.scss';
-@import '../../styles/helpers/mixins.scss';
+@import '../../styles/helpers/variables';
+@import '../../styles/helpers/mixins';
 
 .student-pre-inscription__alert {
     width: 100%;
@@ -21,7 +21,7 @@
 
 .student-pre-inscription__body {
     display: flex;
-    height: calc(100% - 105px); 
+    height: calc(100% - 105px);
     background: url(/assets/imagenes/background-cars.jpeg) no-repeat center center fixed;
     background-size: cover;
     position: relative;
@@ -49,7 +49,7 @@
 .student-pre-inscription__information {
     display: flex;
     justify-content: center;
-    flex-direction: column; 
+    flex-direction: column;
     margin-bottom: 1rem;
     @include bp(md){
         flex-direction: row;
@@ -68,7 +68,7 @@
 
 .input__container {
     position: relative;
-    margin-bottom: 1rem;        
+    margin-bottom: 1rem;
     @include bp(md) {
         margin-bottom: 0;
     }
