--- a/src/app/layout/topmenu/topmenu.component.html
+++ b/src/app/layout/topmenu/topmenu.component.html
@@ -4,7 +4,8 @@
   <ng-container *ngIf="userLogged">
     <ul class="menu__list--desktop">
       <li><a class="menu__item" routerLink="/home">Home</a></li>
-      <ng-container *ngIf="isAdmin">
+      <ng-container *ngIf="isAdmin">                
+        <li><a class="menu__item" routerLink="/teacher-schedule/list">Teacher-Schedule</a></li>
         <li><a class="menu__item" routerLink="/schedule">Schedule</a></li>
         <li><a class="menu__item" routerLink="/assistance">Assistance</a></li>
         <li><a class="menu__item" routerLink="/history">History</a></li>
@@ -19,7 +20,8 @@
     </ul>
     <ul class="menu__list" [@navbarState]="state">
       <li (click)="navigate('/home')"><a>Home</a></li>
-      <ng-container *ngIf="isAdmin">
+      <ng-container *ngIf="isAdmin">          
+        <li (click)="navigate('/teacher-schedule/list')"><a>Teacher-Schedule</a></li>
         <li (click)="navigate('/schedule')"><a>Schedule</a></li>
         <li (click)="navigate('/assistance')"><a >Assistance</a></li>
         <li (click)="navigate('/history')"><a >History</a></li>
