--- a/src/app/teacher-schedule/teacher-edit-schedule/teacher-edit-schedule.component.scss
+++ b/src/app/teacher-schedule/teacher-edit-schedule/teacher-edit-schedule.component.scss
@@ -3,7 +3,6 @@
 
 .teacher-edit-schedule__header {
     color: $color-white;
-    margin-bottom: 2rem;
     line-height: 1.5rem;
     background: $color-blue;
     position: relative;
@@ -11,6 +10,19 @@
     text-align: left;
     padding: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 15px 0 rgba(0, 0, 0, 0.19);  
+}
+
+.teacher-edit-schedule__content {
+    background: url(/assets/imagenes/background-cars.jpeg) no-repeat center center fixed;
+    background-size: cover;
+    min-height: 32rem;
+    padding-top: 2rem;
+    @include bp(md){
+        min-height: 55rem;
+    }
+    @include bp(lg){  
+        min-height: 47rem;
+    }
 }
 
 .teacher-edit-schedule__body {
@@ -51,7 +63,7 @@
     background: $color-orange;
     font-size: 2rem;
     border-radius: 2rem;
-    padding: 1rem;
+    padding: 0.85rem 1rem;
     transform: scale(0.75);
     box-shadow: 3px 2px 5px 0 rgba(0, 0, 0, 0.2);
     // box-shadow: 1px 1px 7px 0 $color-orange;
@@ -71,6 +83,7 @@
     padding: 0.5rem;
     box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.2);
     min-width: 7rem;
+    background-color: white;
 }
 
 .english-dropdown__header {
