--- a/src/app/teacher-schedule/teacher-list-schedule/teacher-list-schedule.component.html
+++ b/src/app/teacher-schedule/teacher-list-schedule/teacher-list-schedule.component.html
@@ -10,7 +10,7 @@
   <div *ngIf="!showMessage">
     <div class="teacher-list-schedule__list">      
         <ng-container *ngFor="let teacher of teachers">
-          <a routerLink="detail/{{teacher.idTeacher}}">      
+          <a routerLink="edit/{{teacher.idTeacher}}">      
             <div class="teacher-list-schedule__card">
               <div class="teacher-list-schedule__card-content">
                 <div class="teacher-list-schedule__card-item">
