--- a/src/app/teacher-schedule/teacher-edit-schedule/teacher-edit-schedule.component.html
+++ b/src/app/teacher-schedule/teacher-edit-schedule/teacher-edit-schedule.component.html
@@ -1,6 +1,6 @@
 <div class="teacher-edit-schedule__header">
   <div>
-    <b><span>{{teacherName}}</span></b>
+    <b><span>Teacher: {{teacher.name}} {{teacher.lastName}}</span></b>
   </div>
 </div>
 
@@ -16,16 +16,14 @@
           <span class="english-dropdown__icon"></span>
         </div>
         <ul>
-          <li>Lunes - Martes 08:00 - 10:00</li>
-          <li>Miercoles - Jueves 08:00 - 10:00</li>
-          <li>Lunes - Viernes 08:00 - 10:00</li>
+            <ng-container *ngFor="let schedule of scheduleList">
+              <li>{{schedule.name}}</li>
+            </ng-container>
         </ul>
       </div>
-
     </div>
 
     <div class="teacher-edit-schedule__right-section">
-
 
       <!-- level dropdown -->
       <div class="english-dropdown">
